# Cargo-Ecosystem-Monitor

./: .gitignore  .gitmodules  DevelopBlog.md  Dockerfile  LICENSE  LICENSE-MIT  Makefile  OtherTools.md  README.md
Code/: README.md  analyse.sql  demo1.rs
Code/RUF_Usage_Analysis/: README.md  RUST_RELEASES.md  ruf_usage_analysis.py  utils_DB.py
Code/accuracy_evaluation/: .gitignore  Cargo.toml  README.md
Code/advisory_scanner/: Cargo.toml  README.md  results.txt  rust_advisory_change.json  rustsec_ranges_change.json
Code/cargo_ruf/: .gitignore  Cargo.toml  README.md  partial_exec.sql
Code/cargo_ruf/audit_pipeline/: .gitignore  Cargo.toml
Code/cargo_ruf/audit_pipeline/src/: main.rs  util.rs  util_sampling.rs
Code/cargo_ruf/deprecated_audit_pipeline/: Cargo.toml
Code/cargo_ruf/deprecated_audit_pipeline/src/: main.rs
Code/cargo_ruf/direct_audit/: Cargo.toml
Code/cargo_ruf/direct_audit/src/: main.rs
Code/cargo_ruf/lifetime_hashmap/: build-lifetime-hashmap.py  build.rs
Code/cargo_ruf/lifetime_hashmap/src/: lib.rs  lifetime.rs  main.rs
Code/cargo_ruf/ruf_audit_virtual/: .gitignore  Cargo.toml  rust-toolchain
Code/cargo_ruf/ruf_audit_virtual/src/: lib.rs
Code/cargo_ruf/ruf_audit_virtual/src/basic/: build_ruf_lifetime.py  mod.rs  ruf_info.rs  ruf_lifetime.rs
Code/cargo_ruf/ruf_audit_virtual/src/core/: depops.rs  deptree.rs  error.rs
Code/cargo_ruf/ruf_audit_virtual/src/virtops/: audit copy.rs  audit.rs  mod.rs  ops.rs  root_audit.rs  treeonly_audit.rs
Code/cargo_ruf/src/: feature.rs  main.rs  rustc_version.rs  util.rs
Code/cargo_ruf/virt_audit_pipeline/: .gitignore  Cargo.toml  mitigation_analysis.py  virt_audit_analysis.py  virt_fix_analysis.py
Code/cargo_ruf/virt_audit_pipeline/src/: main.rs  utils.rs
Code/cargo_ruf_virtual/: .gitignore
Code/conflict_demo/: README.md
Code/crate_downloader/: .gitignore  Cargo.toml  Makefile  README.md
Code/crate_downloader/src/: lib.rs  main.rs
Code/demo/: Cargo.toml  README.md
Code/demo/feature_level_dependency/pack/: Cargo.toml
Code/github_ecosystem/: .gitignore  Makefile  README.md  Readme.md  case_study_usage.json  requirements.txt  ruf_impacts.json  ruf_usage.json  ruf_usage_hot_rust_projects.py
Code/nightly_propagation/accurate_propagation/: .gitignore  Cargo.toml  README.md
Code/nightly_propagation/accurate_propagation/.cargo/: config.toml
Code/nightly_propagation/accurate_propagation/src/: main.rs
Code/nightly_propagation/fecth_crate/: Cargo.toml
Code/nightly_propagation/fecth_crate/src/: main.rs  util.rs
Code/nightly_propagation/test_feature/: .gitignore  Cargo.toml  Makefile  README.md  analyisis.py  analysis.py  features.txt  life.py  requirements.txt  test_feature.py
Code/nightly_propagation/test_feature/src/: main.rs  setup.sh  util.rs
Code/nightly_propagation/test_feature/test_feature/: items.py  pipelines.py
Code/nightly_propagation/test_feature/test_feature/spiders/: get_features.py
Code/rust_deps/: .gitignore  Cargo.toml  ImportantVersionInfo  README.md  continue_run.sql  dep.toml  rust_deps1.backup  rust_deps2.backup  tmp.txt
Code/rust_deps/.cargo/: config.toml
Code/rust_deps/src/: error_helper.rs  graph.rs  lib.rs  main.rs  util.rs
Code/scripts/: utils.py  (+18 more)
config/: README.md  config.toml  pg_hba.conf
data/: README.md
(+81 files in other folders)
