[package]
name = "crate_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downloader = "0.2.6"
postgres = "0.19.2"
log = "0.4.14"
simplelog = "0.12.0"
anyhow = "1.0.56"
crossbeam = "0.8.1"
pbr = "=1.0.4"
