[package]
name = "audit_pipeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.2"
crossbeam = "0.8.1"
log = "0.4.14"
simplelog = "^0.10.0"
lazy_static = "1.4.0"
regex = "1.10.3"
wait-timeout = "0.2.0"
