[package]
name = "accurate_propagation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo = "0.63.0"
postgres = "0.19.2" 
log = "0.4.14"
simplelog = "^0.10.0"
anyhow = "1.0.61"
crossbeam = "0.8.1"
serde_json = "1.0.82"
pbr = "1.0.4"