[package]
name = "test_feature"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "=0.19.2"
downloader = "0.2.6"
anyhow = "1.0.56"
crossbeam = "0.8.1"
flate2 = "1.0.23"
tar = "0.4.38"
regex = "1.5.6"
lazy_static = "1.4.0"
toml = "0.5.9"
walkdir = "2.3.2"